# interview-coach

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  Dockerfile  celery_app.py  docker-compose.yml  pyproject.toml
backend/app/: celery_app.py  main.py
backend/app/api/: sessions.py
backend/app/core/: config.py  database.py
backend/app/models/: session.py
backend/app/schemas/: session.py
backend/app/services/: acoustic.py  librosa.py  openai.py  r2.py  soniox.py
backend/app/workers/: tasks.py
backend/docs/: API.md  SERVICES.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: sessions.ts
frontend/src/components/: AcousticMetrics.tsx  ProcessingScreen.tsx  ReportScreen.tsx  ScoreCard.tsx  UploadScreen.tsx
frontend/src/types/: session.ts
