[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-coach-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Task queue
    "celery>=5.4.0",
    "redis>=5.2.0",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",

    # Config
    "pydantic-settings>=2.6.0",

    # AI / STT
    "soniox>=1.0.0",
    "openai>=1.58.0",

    # Audio processing
    "librosa>=0.10.2",
    "webrtcvad>=2.0.10",
    "numpy>=1.26.0",
    "scipy>=1.14.0",

    # Cloud storage (Cloudflare R2 via S3-compatible API)
    "boto3>=1.35.0",

    # HTTP client
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
